# auditor-ecommerce

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PRODUCT.md  README.md  analytics.json  contexto-auditor-minimal-club.docx  index.html  pyproject.toml  reports.json
.github/workflows/: activate-all-pages.yml  audit.yml  deactivate-all-pages.yml  manage-pages.yml  sync-pages.yml  update-schedule.yml
config/: audit-config.yaml  pages.yaml  schedule.yaml
docs/decisions/: README.md
docs/specs/: README.md
reports/: 2026-06-19T20-11-09.html  2026-06-24T14-02-42.html  2026-06-25T13-59-12.html  2026-06-26T13-56-55.html  2026-06-26T18-14-20.html  2026-06-29T15-25-54.html  2026-06-29T16-18-20.html  2026-06-29T17-59-34.html  2026-06-29T19-57-05.html  2026-06-29T20-38-48.html  2026-06-29T21-20-55.html  2026-06-30T13-51-32.html  2026-07-01T14-02-59.html
scripts/: manage_pages.py  publish_pages.py  setup-startup.ps1  update_schedule.py
src/auditor/: cli.py  engine.py  ga4_client.py  server.py  types.py
src/auditor/config/: loader.py  models.py
src/auditor/layers/: _screenshot.py  layer_a.py  layer_b.py  popup_checker.py
src/auditor/reporters/: explanations.py  html_reporter.py  json_reporter.py
src/auditor/storage/: history.py
src/auditor/web/static/: app.css  app.js
src/auditor/web/templates/: dashboard.html
